--- a/blockly/index.html
+++ b/blockly/index.html
@@ -64,6 +64,7 @@
 
     <category name="Helpers" colour="#a5755b">
       <block type="block_loop"></block>
+      <block type="block_repeat"></block>
       <block type="block_if"></block>
       <block type="block_if_else"></block>
       <block type="block_cond">
@@ -86,9 +87,11 @@
       toolbox: document.getElementById("toolbox")
     });
 
+
     function showCode() {
       Blockly.JavaScript.INFINITE_LOOP_TRAP = null;
       var code = Blockly.JavaScript.workspaceToCode(workspace);
+      let vcounter = 0;
       let variables = {}
       let mem = 19;
       let arr = code
@@ -96,27 +99,63 @@
         .split("\n")
         .map((item, index) => {
           // ADICIONA OS VARIAVEIS EM UMA HASH
-          if (/(var *)/gi.test(item)) {
+          if(/(\w)*( \= var )/gi.test(item)){
             let vav = item.replace('var ', '').replace(/( *)/g, "").split(',')
-            vav.forEach((i, index) => variables[i] = mem - index)
+            let k = ""
+            vav.forEach((i, index) => {
+              let t = i;
+              k = t.match(/(^\w*=)/gi)
+              t = t.replace(t.match(/(^\w*=)/gi), "")
+              if (variables[t] == null)
+                variables[t] = mem - vcounter++
+            })
+            return k
+          }
+          else if (/(var *)/gi.test(item)) {
+            let vav = item.replace('var ', '').replace(/( *)/g, "").split(',')
+            vav.forEach((i, index) => {
+              let item = i;
+              item = item.replace(item.match(/(^\w*=)/gi), "")
+              if (variables[item] == null)
+                variables[item] = mem - vcounter++
+            })
             return ''
           }
           return item.replace(/( *)/g, "")
         })
         .filter(item => !(item === ""))
 
+      console.log(code)
       console.log(arr)
       console.log(variables)
       let stack = [];
       // SUBISTITUI OS NOMES DAS VARIAVEIS PELA POSICAO NA MEMORIA
       for (let i = 0; i < arr.length; i++) {
-        if (/(^\w*\=)/gi.test(arr[i].replace(/( *)/g, ''))) {
-          arr.splice(i + 1, 0, `ST${variables[arr[i].match(/(^\w*)/gi)]}`)
-          arr[i] = 'LI' + arr[i].replace(/(^\w*\=)/gi, '').replace(/( *)/g, '')
+        // altera uma variavel por +1 ou -1
+        if(/(^\w*=)+(\(.*\))/gi.test(arr[i].replace(/( *)/g, ''))){
+          arr.splice(i + 2, 0, `ST%${variables[arr[i].match(/(^\w*)/gi)].toString().padStart(3, "0")}`)
+          var signal = arr[i].match(/(\+|\-)/gi)
+          signal = signal.length > 1 ? signal.reduce((a, b) => (a+1) * (b+1)) : signal + 1
+          if(parseInt(signal) > 0){
+            arr.splice(i + 1, 0, `AD${arr[i].match(/(\d*)/gi).filter(i => i != "")[1]}`)
+          }else{
+            arr.splice(i + 1, 0, `SU${arr[i].match(/(\d*)/gi).filter(i => i != "")[1]}`)
+          }
+          arr[i] = 'LO%' + variables[arr[i].match(/(^\w*)/gi, '')[0]].toString().padStart(3, "0")
         }
-        if (!(/(mf|mt|ve|vd|fn|bf|bt|gl|gu|gt|gd|ll|ld|cm|ci|jm|ne|je|jl|jg|ge|le|lo|li|st|ad|su|di|mu|ht|je|jl|jg|ge|le)/gi.test(arr[i]))) {
-          arr[i] = 'LD%' + variables[arr[i]].toString().padStart(3, "0")
-        } else if (/(^\w{2}\$)/gi.test(arr[i]) && arr[i] != "FN$") {
+        // atribui um valor a uma variavel
+        else if (/(^\w*\=)/gi.test(arr[i].replace(/( *)/g, ''))) {
+          arr.splice(i + 1, 0, `ST%${variables[arr[i].match(/(^\w*)/gi)].toString().padStart(3, "0")}`)
+          arr[i] = 'LO' + arr[i].replace(/(^\w*\=)/gi, '').replace(/( *)/g, '').padStart(3, "0")
+        }
+        // load o valor de uma variavel
+        if (!(/(mf|mt|ve|vd|fn|bf|bt|gl|gu|gt|gd|ll|ld|cm|ci|jm|ne|je|jl|jg|ge|le|lo|li|st|ad|su|di|mu|ht|je|jl|jg|ge|le|fe)/gi.test(arr[i]))) {
+          console.log(arr[i])
+          arr[i] = 'LO%' + variables[arr[i]].toString().padStart(3, "0")
+        } 
+        // atribui a posição de memoria ao comando
+        else if (/(^\w{2}\$)/gi.test(arr[i]) && !(/(jm|ne|je|jl|jg|ge|fn|fe)/gi.test(arr[i]))) {
+          console.log(arr[i])
           arr[i] = arr[i].match(/(^\w{2})/gi) + "%" + variables[arr[i].substring(3)].toString().padStart(3, "0")
         }
       }
