--- a/blockly/index.html
+++ b/blockly/index.html
@@ -84,6 +84,7 @@
       media: "./media/",
       toolbox: document.getElementById("toolbox")
     });
+    workspace.RTL = true
 
     Array.prototype.last = function () {
       return this[this.length - 1];
