--- a/wally/app/src/main/assets/index.html
+++ b/wally/app/src/main/assets/index.html
@@ -1,10 +1,10 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="utf-8">
     <meta name="google" value="notranslate">
-    <title id = "codigo"></title>
+    <title id="codigo"></title>
     <script src="blockly/blockly_compressed.js"></script>
     <script src="blockly/blocks_compressed.js"></script>
     <script src="blockly/javascript_compressed.js"></script>
@@ -29,50 +29,63 @@
             background-color: white;
             border: solid 1px black;
         }
+
     </style>
 </head>
 
 <body>
-    <div id = "teste"></div>
-    <div id="blocklyDiv" style="height: 480px; width: 320px;"></div>
-    <xml id="toolbox" style="display: none;">
-        <category name="Ação" colour="#5ba55b">
-            <block type="move_frente"></block>
-            <block type="move_tras"></block>
-            <block type="vira_esquerda"></block>
-            <block type="vira_direita"></block>
-            <block type="faz_nada"></block>
-            <block type="buzzer_freq"></block>
-            <block type="buzzer_toca"></block>
-            <block type="led_liga"></block>
-            <block type="led_desliga"></block>
-        </category>
-        <category name="Lógica" colour="#745ba5">
-            <block type="get_luminosidade"></block>
-            <block type="get_umidade"></block>
-            <block type="get_distancia"></block>
-            <block type="get_temperatura"></block>
-        </category>
-        <category name="Variaveis" colour="330" custom="VARIABLE"></category>
+<div id="teste"></div>
+<div id="blocklyDiv" style="height: 480px; width: 320px;"></div>
+<xml id="toolbox" style="display: none;">
+    <category name="Ação" colour="#5ba55b">
+        <block type="move_frente"></block>
+        <block type="move_tras"></block>
+        <block type="vira_esquerda"></block>
+        <block type="vira_direita"></block>
+        <block type="faz_nada"></block>
+        <block type="buzzer_freq"></block>
+        <block type="buzzer_toca"></block>
+        <block type="led_liga"></block>
+        <block type="led_desliga"></block>
+    </category>
+    <category name="Lógica" colour="#745ba5">
+        <block type="get_luminosidade"></block>
+        <block type="get_umidade"></block>
+        <block type="get_distancia"></block>
+        <block type="get_temperatura"></block>
+    </category>
+    <category name="Variaveis" colour="330" custom="VARIABLE"></category>
 
-        <category name="Helpers" colour="#a5755b">
-            <block type="block_loop"></block>
-            <block type="block_repeat"></block>
-            <block type="block_if"></block>
-            <block type="block_if_else"></block>
-            <block type="block_cond">
-                <field name="comp">EQ</field>
-            </block>
-            <block type="block_math">
-                <field name="op">PS</field>
-            </block>
-            <block type="math_number">
-                <field name="NUM">1</field>
-            </block>
-        </category>
-    </xml>
-    <script>
-    var workspace = Blockly.inject('blocklyDiv', {media: './media/', toolbox: document.getElementById('toolbox')})
+    <category name="Helpers" colour="#a5755b">
+        <block type="block_loop"></block>
+        <block type="block_repeat"></block>
+        <block type="block_if"></block>
+        <block type="block_if_else"></block>
+        <block type="block_cond">
+            <field name="comp">EQ</field>
+        </block>
+        <block type="block_math">
+            <field name="op">PS</field>
+        </block>
+        <block type="math_number">
+            <field name="NUM">1</field>
+        </block>
+    </category>
+</xml>
+<script>
+    var workspace = Blockly.inject('blocklyDiv', {
+        media: './media/',
+        toolbox: document.getElementById('toolbox'),
+        zoom: {
+            controls: true,
+            wheel: false,
+            startScale: 0.6,
+            maxScale: 3,
+            minScale: 0.3,
+            scaleSpeed: 1.2
+        },
+        trashcan: false
+     })
 
      Array.prototype.last = function () {
       return this[this.length - 1];
@@ -166,7 +179,8 @@
       //mostrando o codigo na tela do cel
       alert(codigo)
     }
-    </script>
+
+</script>
 </body>
 
 </html>
